--- a/example/v-other.html
+++ b/example/v-other.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>HelloWorld</title>
+    <title>其他指令</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="../assets/js/vue.min.js"></script>
@@ -19,18 +19,18 @@
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <div id="app">
-        {{message}}
-    </div>
 
+    <div id="app">
+        <p>v-pre指令是跳过编译，直接输出{{message}}</p>
+        <p v-pre>{{message}}</p>
+    </div>
     <script>
         var app = new Vue({
-            el: '#app',
-            data: {
-                message: 'helloworld'
+            el:'#app',
+            data:{
+                message:'111'
             }
         })
-
     </script>
 </body>
 
