--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
         <div>
             <ul>
                 <li><a href="./example/helloworld.html">helloword</a></li>
+                <li><a href="./example/v-if.html">v-if</a></li>
+                <li><a href="./example/v-show.html">v-show</a></li>
+                <li><a href="./example/v-textv-html.html">v-textv-html</a></li>
+                <li><a href="./example/v-for.html">v-for</a></li>
+                <li><a href="./example/v-on.html">v-on</a></li>
+                <li><a href="./example/v-model.html">v-model</a></li>
+                <li><a href="./example/v-bind.html">v-bind</a></li>
+                <li><a href="./example/v-other.html">其他指令</a></li>
             </ul>
         </div>
     </body>
