--- a/index.html
+++ b/index.html
@@ -12,16 +12,23 @@
     </head>
     <body>
         <div>
+            <h2>基础指令</h2>
             <ul>
-                <li><a href="./example/helloworld.html">helloword</a></li>
-                <li><a href="./example/v-if.html">v-if</a></li>
-                <li><a href="./example/v-show.html">v-show</a></li>
-                <li><a href="./example/v-textv-html.html">v-textv-html</a></li>
-                <li><a href="./example/v-for.html">v-for</a></li>
-                <li><a href="./example/v-on.html">v-on</a></li>
-                <li><a href="./example/v-model.html">v-model</a></li>
-                <li><a href="./example/v-bind.html">v-bind</a></li>
-                <li><a href="./example/v-other.html">其他指令</a></li>
+                <li><a href="./example1/helloworld.html">helloword</a></li>
+                <li><a href="./example1/v-if.html">v-if</a></li>
+                <li><a href="./example1/v-show.html">v-show</a></li>
+                <li><a href="./example1/v-textv-html.html">v-textv-html</a></li>
+                <li><a href="./example1/v-for.html">v-for</a></li>
+                <li><a href="./example1/v-on.html">v-on</a></li>
+                <li><a href="./example1/v-model.html">v-model</a></li>
+                <li><a href="./example1/v-bind.html">v-bind</a></li>
+                <li><a href="./example1/v-other.html">其他指令</a></li>
+            </ul>
+            <h2>全局API</h2>
+            <ul>
+                <li><a href="./example2/Vue.directive.html">Vue.directive自定义指令</a></li>
+                <li><a href="./example2/Vue.extend.html">Vue.expend构造器的延伸</a></li>
+                <li><a href="./example2/Vue.set.html">Vue.set全局操作</a></li>
             </ul>
         </div>
     </body>
