--- a/example2/template.html
+++ b/example2/template.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Vue.expend构造器的延伸</title>
+    <title>Template模板制作三种方法</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="../assets/js/vue.min.js"></script>
@@ -19,22 +19,36 @@
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <h1>Vue.expend构造器的延伸</h1>
+    <h1>Template模板制作三种方法</h1>
     <hr>
-    <author></author>
-    <div id="author"></div>
+    <div id="app">
+        {{message}}
+    </div>
+    <template id="td2">
+        <p style='color:red'>标签模板</p>
+    </template>
+
+    <!--设置type 好处是可以引用外部 src  -->
+    <script type='x-template' id="td3"> 
+        <p style='color:red'>scritp模板</p>
+    </script>
     <script>
-        var authorURL = Vue.extend({
-            template:"<p><a :href='authorUrl'>{{authorName}}</a></p>",//属性需要绑定
-            data:function(){////扩展的data必须这么写
-                return{ 
-                    authorName:'作者',
-                    authorUrl:'http://www.joystack.xin'
-                }
-            }
+        var app = new Vue({
+            el: '#app',
+            data: {
+                message: "HelloVue"
+            },
+            //姿势1
+            // template:`
+            //     <p style='color:red'>我是选项模板</p>
+            // `
+
+            //姿势2 标签模板
+            //template:'#td2'
+
+            //姿势3 script模板
+            template: '#td3'
         })
-        new authorURL().$mount("author")//将扩展绑定到author标签上，一般扩展是在组件中使用
-        new authorURL().$mount("#author")
     </script>
 </body>
 
