--- a/example3/propsData.html
+++ b/example3/propsData.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Vue.expend构造器的延伸</title>
+    <title>propsData Option 全局扩展的数据传递</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="../assets/js/vue.min.js"></script>
@@ -19,22 +19,28 @@
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <h1>Vue.expend构造器的延伸</h1>
+    <h1>propsData Option 全局扩展的数据传递</h1>
     <hr>
-    <author></author>
-    <div id="author"></div>
+    <header></header>
+
     <script>
-        var authorURL = Vue.extend({
-            template:"<p><a :href='authorUrl'>{{authorName}}</a></p>",//属性需要绑定
-            data:function(){////扩展的data必须这么写
-                return{ 
-                    authorName:'作者',
-                    authorUrl:'http://www.joystack.xin'
+
+        var header = Vue.extend({
+            template:`<p style='color:red'>{{message}} - {{a}}</p>`,
+            data:function(){ //扩展的数据必须这么写
+                return{
+                    message:'11111111111111'
                 }
-            }
+            },
+            props:['a']//接收的参数
         })
-        new authorURL().$mount("author")//将扩展绑定到author标签上，一般扩展是在组件中使用
-        new authorURL().$mount("#author")
+        
+        new header({
+            propsData:{
+                a:'aaa'
+            }
+        }).$mount('header')
+
     </script>
 </body>
 
