--- a/index.html
+++ b/index.html
@@ -2,34 +2,62 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Vue2.0</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-        <div>
-            <h2>基础指令</h2>
-            <ul>
-                <li><a href="./example1/helloworld.html">helloword</a></li>
-                <li><a href="./example1/v-if.html">v-if</a></li>
-                <li><a href="./example1/v-show.html">v-show</a></li>
-                <li><a href="./example1/v-textv-html.html">v-textv-html</a></li>
-                <li><a href="./example1/v-for.html">v-for</a></li>
-                <li><a href="./example1/v-on.html">v-on</a></li>
-                <li><a href="./example1/v-model.html">v-model</a></li>
-                <li><a href="./example1/v-bind.html">v-bind</a></li>
-                <li><a href="./example1/v-other.html">其他指令</a></li>
-            </ul>
-            <h2>全局API</h2>
-            <ul>
-                <li><a href="./example2/Vue.directive.html">Vue.directive自定义指令</a></li>
-                <li><a href="./example2/Vue.extend.html">Vue.expend构造器的延伸</a></li>
-                <li><a href="./example2/Vue.set.html">Vue.set全局操作</a></li>
-            </ul>
-        </div>
-    </body>
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Vue2.0</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+    <div>
+        <h2>基础指令</h2>
+        <ul>
+            <li><a href="./example1/helloworld.html">helloword</a></li>
+            <li><a href="./example1/v-if.html">v-if</a></li>
+            <li><a href="./example1/v-show.html">v-show</a></li>
+            <li><a href="./example1/v-textv-html.html">v-textv-html</a></li>
+            <li><a href="./example1/v-for.html">v-for</a></li>
+            <li><a href="./example1/v-on.html">v-on</a></li>
+            <li><a href="./example1/v-model.html">v-model</a></li>
+            <li><a href="./example1/v-bind.html">v-bind</a></li>
+            <li><a href="./example1/v-other.html">其他指令</a></li>
+        </ul>
+        <h2>全局API</h2>
+        <ul>
+            <li><a href="./example2/Vue.directive.html">Vue.directive自定义指令</a></li>
+            <li><a href="./example2/Vue.extend.html">Vue.expend构造器的延伸</a></li>
+            <li><a href="./example2/Vue.set.html">Vue.set全局操作</a></li>
+            <li><a href="./example2/lifecycle.html">Vue生命周期</a></li>
+            <li><a href="./example2/template.html">Template模板的制作</a></li>
+            <li><a href="./example2/component-1.html">Component组件</a></li>
+            <li><a href="./example2/component-2.html">Component props属性设置</a></li>
+            <li><a href="./example2/component-3.html">Component 父子组件关系</a></li>
+            <li><a href="./example2/component-4.html">Component 标签</a></li>
+        </ul>
+        <h2>Vue构造器的选项</h2>
+        <span>选项就是在Vue构造器里的配置功能的前缀</span>
+        <ul>
+            <li><a href="./example3/propsData.html">propsData Option</a></li>
+            <li><a href="./example3/computed.html">computed Option</a></li>
+            <li><a href="./example3/method.html">methods Option</a></li>
+            <li><a href="./example3/watch.html">watch Option</a></li>
+            <li><a href="./example3/mixins.html">Mixins Option</a></li>
+            <li><a href="./example3/extends.html">Extends Option</a></li>
+        </ul>
+        <h2>Vue实例和内置属性</h2>
+        <ul>
+            <li><a href="./example4/example01.html">example method</a></li>
+            <li><a href="./example4/example02.html">example method</a></li>
+            <li><a href="./example4/example03.html">example event</a></li>
+        </ul>
+    </div>
+    </div>
+</body>
+
 </html>
