--- a/example2/component-1.html
+++ b/example2/component-1.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Vue.expend构造器的延伸</title>
+    <title>Component组件</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="../assets/js/vue.min.js"></script>
@@ -19,22 +19,35 @@
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <h1>Vue.expend构造器的延伸</h1>
+    <h1>Component组件自定义</h1>
     <hr>
-    <author></author>
-    <div id="author"></div>
+    <div id="app">
+        <jscom></jscom>
+        <jscom1></jscom1>
+    </div>
+    <div id="app1">
+        <jscom></jscom>
+    </div>
+
     <script>
-        var authorURL = Vue.extend({
-            template:"<p><a :href='authorUrl'>{{authorName}}</a></p>",//属性需要绑定
-            data:function(){////扩展的data必须这么写
-                return{ 
-                    authorName:'作者',
-                    authorUrl:'http://www.joystack.xin'
+        Vue.component('jscom', {
+            template: `<p style="color:red">全局自定义组件:需要在Vue的作用域里面</p>`
+        })
+        //需要在Vue的作用域里面
+        var app = new Vue({
+            el:'#app',
+            data:{
+
+            },
+            components:{
+                "jscom1":{
+                    template:`<p style="color:green">局部定义组件</p>`
                 }
             }
         })
-        new authorURL().$mount("author")//将扩展绑定到author标签上，一般扩展是在组件中使用
-        new authorURL().$mount("#author")
+        var app1 = new Vue({
+            el:'#app1'
+        })
     </script>
 </body>
 
