--- a/example2/component-3.html
+++ b/example2/component-3.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Vue.expend构造器的延伸</title>
+    <title>Component 父子组件关系</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="../assets/js/vue.min.js"></script>
@@ -19,22 +19,38 @@
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <h1>Vue.expend构造器的延伸</h1>
+    <h1>Component 父子组件关系</h1>
     <hr>
-    <author></author>
-    <div id="author"></div>
+    <div id="app">
+        <parent></parent>
+    </div>
+
     <script>
-        var authorURL = Vue.extend({
-            template:"<p><a :href='authorUrl'>{{authorName}}</a></p>",//属性需要绑定
-            data:function(){////扩展的data必须这么写
-                return{ 
-                    authorName:'作者',
-                    authorUrl:'http://www.joystack.xin'
-                }
+        
+        //子组件
+        var childComponent = {
+            template:`<p style="color:green">子组件</p>`
+        }
+
+        //在组件内定义组件
+        var parentComponent = {
+            template:`
+                <div style='background-color: yellow'>
+                    <p style="color:red">父组件</p>
+                    <child></child>
+                </div>
+            `,
+            components:{
+                'child':childComponent,
+            }
+        }
+
+        var app = new Vue({
+            el:'#app',
+            components:{
+                "parent":parentComponent
             }
         })
-        new authorURL().$mount("author")//将扩展绑定到author标签上，一般扩展是在组件中使用
-        new authorURL().$mount("#author")
     </script>
 </body>
 
